# occ-secure-exports

./: .gitignore  .prettierignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  justfile  package.json  pnpm-lock.yaml
.github/workflows/: build-release.yml  ci.yml  package-managers.yml  release.yml
docs/: ARCHITECTURE.md  RELEASING.md
scripts/: update-packages.mjs
src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crypto.rs  download.rs  error.rs  lib.rs  main.rs  profile.rs  s3.rs
src-tauri/tests/: e2e.rs  profiles.rs
src/assets/fonts/: fonts.css
src/components/: ConnectionForm.test.tsx  ConnectionForm.tsx  DownloadSidebar.tsx  ErrorBoundary.tsx  Explorer.tsx  Footer.tsx  KeygenDialog.tsx  ProfileList.tsx  UpdateDialog.tsx  Wordmark.tsx
src/hooks/: useIdleDisconnect.test.tsx  useIdleDisconnect.ts
src/lib/: dlqueue.test.ts  dlqueue.ts  errors.test.ts  errors.ts  keycheck.test.ts  keycheck.ts  tree.test.ts  tree.ts
